--- a/app/src/main/res/layout/fragment_assessment_details.xml
+++ b/app/src/main/res/layout/fragment_assessment_details.xml
@@ -32,6 +32,15 @@
                         android:layout_gravity="fill_horizontal"
                 />
                 <TextView
+                        android:text="Assessment Type: "
+                        android:layout_column="1"
+                        android:layout_gravity="end|center_vertical"
+                />
+                <TextView
+                        android:id="@+id/eAssessmentType"
+                        android:layout_gravity="fill_horizontal"
+                />
+                <TextView
                         android:text="End Date : "
                         android:layout_column="1"
                         android:layout_gravity="end|center_vertical"
